# llm-flops

./: .env  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
app/data_collection/: blog_data.py
app/embedding_server/: bento_build.sh  bentofile.yaml  service.py
app/langgraph/: tools.py
app/llm_server/: bentofile.yaml  graph.py  service.py  state.py  tools.py
app/llm_server/utils/: env_setup.py
app/llm_server/vectorstore/: opensearch_hybrid.py
app/vectorstore/: opensearch_hybrid.py
data-collection/: blog-data.py  blog_data.py  data-import-test.ipynb  load_all_data.py  reddit-data.py  reddit_data.py  test.ipynb  youtube-channel.json  youtube-data.py
data_collection/: blog_data.py  youtube_data.py
scripts/: bento_build.sh  docker-compose.yaml  llm_server_container_build.sh  run_containers.sh
test/: agentic-rag.ipynb  websearch.py
test/vectorstore/: doc_insert.py
